--- a/src/views/_includes/blocks/feedback.pug
+++ b/src/views/_includes/blocks/feedback.pug
@@ -52,8 +52,10 @@ section.feedback
               a(href="#").feedback__card-button Перейти к отзыву
 
 
-      .swiper-button-prev.feedback__swiper-button-prev
-      .swiper-button-next.feedback__swiper-button-next
+    .swiper-button-prev.feedback__swiper-button-prev
+    .swiper-button-next.feedback__swiper-button-next
+
+  .container
 
     .banner__title Занимаем лидирующие позиции
 
