--- a/src/views/_includes/blocks/product/hero.pug
+++ b/src/views/_includes/blocks/product/hero.pug
@@ -9,7 +9,7 @@ section.productHero
             .swiper-slide.productHero__swiper-slide
                 h2.title.productHero__title Кухня Kuchenberg Kappella +&nbsp;Kuchenberg Kappella Pro
 
-                .productHero__info
+                .productHero__info.container
                     .productHero__block
                         span.productHero__price от 51 424 ₽ 
                         span.productHero__text2.productHero__text За погонный метр
@@ -26,8 +26,8 @@ section.productHero
         
             .swiper-slide.productHero__swiper-slide
                     h2.title.productHero__title Кухня Kuchenberg Kappella +&nbsp;Kuchenberg Kappella Pro
-
-                    .productHero__info
+                    
+                    .productHero__info.container
                         .productHero__block
                             span.productHero__price от 51 424 ₽ 
                             span.productHero__text2.productHero__text За погонный метр
