--- a/src/views/_includes/blocks/product/others.pug
+++ b/src/views/_includes/blocks/product/others.pug
@@ -1,5 +1,5 @@
 section.others
-    .others__container
+    .others__container.container
         span.others__label Другие
         a(href="#").articles__link.articles__link--red классические кухни
             .articles__link-arrow
