--- a/src/views/_includes/blocks/product/questions.pug
+++ b/src/views/_includes/blocks/product/questions.pug
@@ -1,4 +1,5 @@
-.title.questions__title Часто задаваемые вопросы
+.container
+    .title.questions__title Часто задаваемые вопросы
 section.questions
     .questions__leader
         .questions__leader-img
