--- a/src/scss/components/product/_others.scss
+++ b/src/scss/components/product/_others.scss
@@ -3,7 +3,7 @@
 
     &__container {
         padding-top: 80px;
-        padding-left: 25px;
+        padding-right: 0 !important;
     }
 
     &__title {
