--- a/src/scss/components/product/_product-hero.scss
+++ b/src/scss/components/product/_product-hero.scss
@@ -14,6 +14,10 @@
             overflow: hidden;
             position: relative;
             min-height: 450px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
 
             &::after {
                 content: '';
@@ -66,6 +70,8 @@
         align-items: center;
         justify-content: center;
         width: 100%;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     &__block {
