--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -35,6 +35,7 @@
     }
 
     &__wrap {
+        // display: none !important;
         background-color: #fff;
         width: 100%;
         padding-top: 59px;
