--- a/src/scss/components/product/_product-benefits.scss
+++ b/src/scss/components/product/_product-benefits.scss
@@ -24,6 +24,10 @@
     background-color: #f4f4f4;
     padding-bottom: 108px;
 
+    // .benefits__swiper-slide {
+    //     width: 1000px !important;
+    // }
+
     .benefits__card {
         height: 192px;
         // width: 270px;
