--- a/src/views/_includes/blocks/catalogFeedback.pug
+++ b/src/views/_includes/blocks/catalogFeedback.pug
@@ -13,7 +13,11 @@ section.feedback
               .feedback__user
                 img.feedback__user-social(src="assets/img/feedback/vk.svg", alt="vk")
                 span.feedback__user-name Андрей Иванов
-              p.feedback__card-text Спасибо огромное, работа вашей команды бесценный вклад в счастье многих людей, а&nbsp;теперь и частичка моей радости😊 Все оказалось совсем не сложно и главное быстро!!! Вы огромные молодцы🙏 
+              .feedback__card-block
+                p.feedback__card-text Спасибо огромное, работа вашей команды бесценный вклад в счастье многих людей, а&nbsp;теперь и частичка моей радости😊 Все оказалось совсем не сложно и главное быстро!!! Вы огромные молодцы🙏
+              .feedback__card-block
+                p.feedback__card-text Спасибо огромное, работа вашей команды бесценный вклад в счастье многих людей, а&nbsp;теперь и частичка моей радости😊 Все оказалось совсем не сложно и главное быстро!!! Вы огромные молодцы🙏
+            .feedback__card-bottom
               .span.feedback__card-date 06.05.2019 в 15:20
               a(href="#").feedback__card-button Перейти к отзыву
         .swiper-slide.feedback__swiper-slide
@@ -26,7 +30,9 @@ section.feedback
               .feedback__user
                 img.feedback__user-social(src="assets/img/feedback/instagram.svg", alt="instagram")
                 span.feedback__user-name JULLIAS_23
-              p.feedback__card-text Мой дизайнер уже давно просил разместить отзыв, но время нашлось только теперь во время карантина. Если вы приняли решение купить новую кухню от Кухни-Сити, то я могу порекомендовать салон на Проспект Мира. Кухню заказала БристельМой... 
+              .feedback__card-block
+                p.feedback__card-text Мой дизайнер уже давно просил разместить отзыв, но время нашлось только теперь во время карантина. Если вы приняли решение купить новую кухню от Кухни-Сити, то я могу порекомендовать салон на Проспект Мира. Кухню заказала БристельМой... 
+            .feedback__card-bottom
               .span.feedback__card-date 06.05.2019 в 15:20
               a(href="#").feedback__card-button Перейти к отзыву
         .swiper-slide.feedback__swiper-slide
@@ -39,11 +45,13 @@ section.feedback
               .feedback__user
                 img.feedback__user-social(src="assets/img/feedback/vk.svg", alt="vk")
                 span.feedback__user-name Андрей Иванов
-              p.feedback__card-text Спасибо огромное, работа вашей команды бесценный вклад в счастье многих людей, а&nbsp;теперь и частичка моей радости😊 Все оказалось совсем не сложно и главное быстро!!! Вы огромные молодцы🙏 
+              .feedback__card-block
+                p.feedback__card-text Спасибо огромное, работа вашей команды бесценный вклад в счастье многих людей, а&nbsp;теперь и частичка моей радости😊 Все оказалось совсем не сложно и главное быстро!!! Вы огромные молодцы🙏 
+            .feedback__card-bottom
               .span.feedback__card-date 06.05.2019 в 15:20
               a(href="#").feedback__card-button Перейти к отзыву
 
 
-      .swiper-button-prev.feedback__swiper-button-prev
-      .swiper-button-next.feedback__swiper-button-next
+    .swiper-button-prev.feedback__swiper-button-prev
+    .swiper-button-next.feedback__swiper-button-next
 
