--- a/src/views/_includes/blocks/contacts/location.pug
+++ b/src/views/_includes/blocks/contacts/location.pug
@@ -27,5 +27,123 @@ section.location
 
         .swiper-button-prev.salon__swiper-button-prev
         .swiper-button-next.salon__swiper-button-next
+      
+      .salon__name Центральный салон
 
     .map#centralMap
+
+section.location
+  .container
+    .title.location__title Салон в Краснодаре
+
+  .location__container
+    .salon
+      h3.salon__title Центральный салон 
+      p.salon__subtitle Фото салона
+      .salon__wrap
+        .swiper-container.salon__swiper-container
+          .swiper-wrapper.salon__swiper-wrapper
+            .swiper-slide.salon__swiper-slide
+              .salon__photo
+                img(src="assets/img/contacts/salon1.jpg", alt="salon-photo")
+            .swiper-slide.salon__swiper-slide
+              .salon__photo
+                img(src="assets/img/contacts/salon2.jpg", alt="salon-photo")
+            .swiper-slide.salon__swiper-slide
+              .salon__photo
+                img(src="assets/img/contacts/salon3.jpg", alt="salon-photo")
+            .swiper-slide.salon__swiper-slide
+              .salon__photo
+                img(src="assets/img/contacts/salon1.jpg", alt="salon-photo")
+            .swiper-slide.salon__swiper-slide
+              .salon__photo
+                img(src="assets/img/contacts/salon2.jpg", alt="salon-photo")
+            .swiper-slide.salon__swiper-slide
+              .salon__photo
+                img(src="assets/img/contacts/salon3.jpg", alt="salon-photo")
+
+        .swiper-button-prev.salon__swiper-button-prev
+        .swiper-button-next.salon__swiper-button-next
+      
+
+    .map#krasnodarMap
+
+section.location
+  .container
+    .title.location__title Салон в Казани
+
+  .location__container
+    .salon
+      h3.salon__title Центральный салон 
+      p.salon__subtitle Фото салона
+      .salon__wrap
+        .swiper-container.salon__swiper-container
+          .swiper-wrapper.salon__swiper-wrapper
+            .swiper-slide.salon__swiper-slide
+              .salon__photo
+                img(src="assets/img/contacts/salon1.jpg", alt="salon-photo")
+            .swiper-slide.salon__swiper-slide
+              .salon__photo
+                img(src="assets/img/contacts/salon2.jpg", alt="salon-photo")
+            .swiper-slide.salon__swiper-slide
+              .salon__photo
+                img(src="assets/img/contacts/salon3.jpg", alt="salon-photo")
+            .swiper-slide.salon__swiper-slide
+              .salon__photo
+                img(src="assets/img/contacts/salon1.jpg", alt="salon-photo")
+            .swiper-slide.salon__swiper-slide
+              .salon__photo
+                img(src="assets/img/contacts/salon2.jpg", alt="salon-photo")
+            .swiper-slide.salon__swiper-slide
+              .salon__photo
+                img(src="assets/img/contacts/salon3.jpg", alt="salon-photo")
+
+        .swiper-button-prev.salon__swiper-button-prev
+        .swiper-button-next.salon__swiper-button-next
+      
+
+    .map#kazanMap
+
+section.location
+  .container
+    .title.location__title Головной офис
+
+  .location__container
+    .salon
+      .salon__description Москва, Киевское шоссе, 1 км от МКАД, корпус Б, офисный подъезд 7, 5 этаж, офис 518
+      .main-social
+        h2.social__subtitle Подписывайтесь на нас
+        .social__block
+          a(href="#").social__block-link
+            img(src="assets/img/social/facebook.svg", alt="facebook").social__block-img
+          a(href="#").social__block-link
+            img(src="assets/img/social/vk.svg", alt="vk").social__block-img
+          a(href="#").social__block-link
+            img(src="assets/img/contacts/odnoklasniki.svg", alt="odnoklasniki").social__block-img
+          a(href="#").social__block-link
+            img(src="assets/img/social/instagram.svg", alt="instagram").social__block-img
+          a(href="#").social__block-link
+            img(src="assets/img/social/pinterest.svg", alt="pinterest").social__block-img
+          a(href="#").social__block-link
+            img(src="assets/img/social/twitter.svg", alt="twitter").social__block-img
+          a(href="#").social__block-link
+            img(src="assets/img/social/youtube.svg", alt="youtube").social__block-img
+      
+
+    .map#mainMap
+
+    //- .location__info
+    //-   .location__info-logo
+    //-   .location__info-title Москва, Комсомольский пр-т, д. 17.
+    //-   .location__info-block
+    //-     a(href="tel:+8495135478 ").location__info-title 8 (495) 135 43 78
+    //-     p.location__info-subtitle Ежедневно с 10.00 до 21.00
+    //-   a(href="mailto:info@kuhnicity.ru").location__info-title info@kuhnicity.ru 
+    //-   .location__info-label.location__info-title Фрунзенская
+    //-   .social__block.location__social
+    //-       a(href="#").social__block-link
+    //-         img(src="assets/img/contacts/wa.svg", alt="whatsApp").social__block-img
+    //-       a(href="#").social__block-link
+    //-         img(src="assets/img/contacts/viber.svg", alt="viber").social__block-img
+    //-       a(href="#").social__block-link
+    //-         img(src="assets/img/contacts/telegram.svg", alt="telegram").social__block-img
