--- a/src/scss/components/contacts/location.scss
+++ b/src/scss/components/contacts/location.scss
@@ -2,6 +2,21 @@
     padding: 45px 25px;
     background-color: #fff;
 
+    &__description {
+        font-size: 12px;
+        line-height: 178.8%;
+        /* or 21px */
+        letter-spacing: 0.105em;
+        text-transform: uppercase;
+        color: #323232;
+        margin-bottom: 36px;
+        max-width: 252px;
+    }
+
+    &__name {
+        display: none;
+    }
+
     &__swiper {
         // &-container {
         //     max-width: 534px;
@@ -22,11 +37,14 @@
                     width: 8px !important;
                     height: 8px !important;
                     margin-right: 4px;
+                    border-color: #FFFFFF !important;
                 }
             }
 
             &-prev {
                 left: -14px !important;
+                background-color: $color-red !important;
+
             }
 
             &-next {
@@ -51,7 +69,7 @@
         line-height: 25px;
         /* identical to box height */
         color: #323232;
-        text-transform: uppercase;
+        // text-transform: uppercase;
         margin-bottom: 24px;
     }
 
@@ -71,6 +89,11 @@
         width: 86px;
         height: 86px;
     }
+
+    .social__subtitle {
+        font-size: 16px;
+        width: 285px;
+    }
 }
 
 .map {
@@ -81,4 +104,110 @@
 .leaflet-top,
 .leaflet-bottom {
     z-index: 900 !important;
+}
+
+.leaflet-container a {
+    color: inherit !important;
+}
+
+.leaflet-control-container {
+    display: none !important;
+}
+
+
+.leaflet-popup-content p {
+    margin: 0 !important;
+}
+
+.leaflet-container a.leaflet-popup-close-button {
+    font-weight: normal !important;
+    color: #424242 !important;
+    padding: 15px 30px 0 0 !important;
+}
+
+.leaflet-popup-content-wrapper {
+    border-radius: 0 !important;
+    box-shadow: none !important;
+}
+
+.location__social {
+    margin-bottom: 0 !important;
+
+    .social__block-link {
+        width: 33px;
+        height: 33px;
+    }
+
+    .social__block-img {
+
+        width: 17px !important;
+        height: 17px !important;
+
+        path {
+            fill: #656565;
+        }
+    }
+}
+
+.location {
+    padding-bottom: 76px;
+
+    &__title {
+        margin-bottom: 50px;
+    }
+
+    &__info {
+
+        padding-left: 25px;
+        padding-top: 30px;
+
+        &-logo {
+            width: 141px;
+            height: 30px;
+            display: block;
+            background: url('../img/contacts/logo.svg') no-repeat center / contain;
+            margin-bottom: 33px;
+        }
+
+        &-title {
+            font-size: 12px;
+            line-height: 120.3%;
+            /* or 14px */
+            max-width: 218px;
+
+            letter-spacing: 0.105em;
+            text-transform: uppercase;
+
+            color: #292929;
+        }
+
+        &-subtitle {
+            font-size: 12px;
+            line-height: 140%;
+            /* identical to box height, or 17px */
+            letter-spacing: 0.035em;
+            color: #6A6A6A;
+        }
+
+        &-block {
+            margin-top: 49px;
+            margin-bottom: 30px;
+        }
+
+        &-label {
+            display: flex;
+            align-items: center;
+            margin-top: 31px;
+            margin-bottom: 35px;
+
+            &::before {
+                content: '';
+                width: 15px;
+                height: 15px;
+                background: url('../img/contacts/label.svg') no-repeat center / cover;
+                display: inline-block;
+                margin-right: 7px;
+            }
+        }
+    }
 }
