--- a/src/scss/components/_leader.scss
+++ b/src/scss/components/_leader.scss
@@ -62,7 +62,7 @@
         &-sign {
             width: 82px;
             height: 49px;
-            background: #F2F2F2 url('../img/leader/leader-sign.svg') no-repeat center / cover;
+            background: #F2F2F2 url('../img/leader/leader-sign.png') no-repeat center / cover;
         }
 
 
