--- a/src/scss/components/product/_chars.scss
+++ b/src/scss/components/product/_chars.scss
@@ -127,14 +127,17 @@
 
 .chars-description {
 
-    // padding-bottom: 29px;
-    &__swiper-button {
+    .swiper-button {
 
         &-next,
         &-prev {
             display: none !important;
         }
     }
+
+
+    // padding-bottom: 29px;
+
 
 
     .chars {
