--- a/src/views/vacancies.pug
+++ b/src/views/vacancies.pug
@@ -32,7 +32,7 @@ html(lang="ru", class="no-js")
             include _includes/blocks/modal
 
         block styles
-          link(rel='stylesheet', href='assets/css/vacancies.css?v=' + PACKAGE.version)
+          link(rel='stylesheet', href='assets/css/services.css?v=' + PACKAGE.version)
         block scripts-config
             script.
                 /* изменяемые настройки скриптов, указаны значения по умолчанию */
@@ -47,4 +47,3 @@ html(lang="ru", class="no-js")
             script(src='assets/js/main.bundle.js?v=' + PACKAGE.version)
             <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
-            <script src="//cdn.jsdelivr.net/npm/jquery.marquee@1.5.0/jquery.marquee.min.js" type="text/javascript"></script>
